--- a/Moyu.JsonExtensions.csproj
+++ b/Moyu.JsonExtensions.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>1.0.0</Version>
+    <PackageId>Moyu.JsonExtensions</PackageId>
+    <Authors>yiXu</Authors>
+    <Description>Elegant JSON extension methods for .NET</Description>
   </PropertyGroup>
 
 </Project>
