--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,42 +1,45 @@
 name: Publish NuGet Package
 
 on:
-  push:
-    tags:
-      - 'v*'
+    push:
+        tags:
+            - "v*"
+
+permissions:
+    contents: write # ✅ 允许创建 Release
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '8.0.x'
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
+              with:
+                  dotnet-version: "8.0.x"
 
-    - name: Restore dependencies
-      run: dotnet restore
+            - name: Restore dependencies
+              run: dotnet restore
 
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
+            - name: Build
+              run: dotnet build --configuration Release --no-restore
 
-    - name: Pack NuGet package
-      run: dotnet pack --configuration Release --no-build -o ./nupkg
+            - name: Pack NuGet package
+              run: dotnet pack --configuration Release --no-build -o ./nupkg
 
-    - name: Push to NuGet
-      run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+            - name: Push to NuGet
+              run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
 
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v2
-      with:
-        tag_name: ${{ github.ref_name }}
-        name: Release ${{ github.ref_name }}
-        body: |
-          🧩 This is an automated release for version ${{ github.ref_name }}.
-          - ✅ Published to NuGet.
-        draft: false
-        prerelease: false
+            - name: Create GitHub Release
+              uses: softprops/action-gh-release@v2
+              with:
+                  tag_name: ${{ github.ref_name }}
+                  name: Release ${{ github.ref_name }}
+                  body: |
+                      🧩 This is an automated release for version ${{ github.ref_name }}.
+                      - ✅ Published to NuGet.
+                  draft: false
+                  prerelease: false
