--- a/Moyu.JsonExtensions.csproj
+++ b/Moyu.JsonExtensions.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <IncludeSource>true</IncludeSource>
     <Nullable>enable</Nullable>
     <Version>1.3.0</Version>
     <PackageId>Moyu.JsonExtensions</PackageId>
